Added time to The Design Room projects

--- a/_pages/room.html
+++ b/_pages/room.html
@@ -30,7 +30,21 @@ keywords: anagh sharma, design, experiment, designer
 
 <div class="row mt3">
   <div class="large-4 medium-4 columns pb2">
-    <p class="room-text text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
+    <p class="text-justify pr5">Music can be our biggest inspiration. This project is all about the wonderful and alluring lyrics. With every image, I try to visualise what is in the words.</p>
+    <br>
+    <svg width="94px" height="25px" viewBox="0 0 94 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Home-Copy-3" transform="translate(-89.000000, -745.000000)">
+              <g id="Group-8-Copy" transform="translate(89.000000, 745.000000)">
+                  <rect id="Background" fill="#4A4A4A" x="0" y="0" width="94" height="25" rx="4"></rect>
+                  <path d="M16.4444444,12.9 L12,12.9 L12,17.4 L16.4444444,17.4 L16.4444444,12.9 Z M15.5555556,3 L15.5555556,4.8 L8.44444444,4.8 L8.44444444,3 L6.66666667,3 L6.66666667,4.8 L5.77777778,4.8 C4.79111111,4.8 4.00888889,5.61 4.00888889,6.6 L4,19.2 C4,20.19 4.79111111,21 5.77777778,21 L18.2222222,21 C19.2,21 20,20.19 20,19.2 L20,6.6 C20,5.61 19.2,4.8 18.2222222,4.8 L17.3333333,4.8 L17.3333333,3 L15.5555556,3 Z M18.2222222,19.2 L5.77777778,19.2 L5.77777778,9.3 L18.2222222,9.3 L18.2222222,19.2 Z" id="Shape" fill="#202020" fill-rule="nonzero"></path>
+                  <text id="•-2016" font-family="Roboto-Medium, Roboto" font-size="15" font-weight="400" fill="#202020">
+                      <tspan x="24" y="18">• 2016-17</tspan>
+                  </text>
+              </g>
+          </g>
+      </g>
+    </svg>
   </div>
   <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/untitled-1/001-cedarwood-road.jpg" class="slb" alt="Cedarwood Road"/>
@@ -76,7 +90,21 @@ keywords: anagh sharma, design, experiment, designer
   
   <div class="row mt3">
     <div class="large-4 medium-4 columns pb2">
-      <p class="room-text text-justify pr5">Tried my hands at a publication campaign to raise money for global disaster relief. The theme was - “The Spirit of making our world a better place” - in wake of all the calamities humanity faced in 2017.</p>
+      <p class="text-justify pr5">Tried my hands at a publication campaign to raise money for global disaster relief. The theme was - “The Spirit of making our world a better place” - in wake of all the calamities humanity faced in 2017.</p>
+      <br>
+      <svg width="72px" height="25px" viewBox="0 0 72 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="Home-Copy-3" transform="translate(-89.000000, -745.000000)">
+                <g id="Group-8-Copy" transform="translate(89.000000, 745.000000)">
+                    <rect id="Background" fill="#4A4A4A" x="0" y="0" width="72" height="25" rx="4"></rect>
+                    <path d="M16.4444444,12.9 L12,12.9 L12,17.4 L16.4444444,17.4 L16.4444444,12.9 Z M15.5555556,3 L15.5555556,4.8 L8.44444444,4.8 L8.44444444,3 L6.66666667,3 L6.66666667,4.8 L5.77777778,4.8 C4.79111111,4.8 4.00888889,5.61 4.00888889,6.6 L4,19.2 C4,20.19 4.79111111,21 5.77777778,21 L18.2222222,21 C19.2,21 20,20.19 20,19.2 L20,6.6 C20,5.61 19.2,4.8 18.2222222,4.8 L17.3333333,4.8 L17.3333333,3 L15.5555556,3 Z M18.2222222,19.2 L5.77777778,19.2 L5.77777778,9.3 L18.2222222,9.3 L18.2222222,19.2 Z" id="Shape" fill="#202020" fill-rule="nonzero"></path>
+                    <text id="•-2016" font-family="Roboto-Medium, Roboto" font-size="15" font-weight="400" fill="#202020">
+                        <tspan x="24" y="18">• 2017</tspan>
+                    </text>
+                </g>
+            </g>
+        </g>
+      </svg>
     </div>
     <div class="large-4 medium-4 columns pb2">
       <img src="/assets/images/the-design-room/untitled-2/01-stronger.png" class="slb" alt="Stronger"/>
@@ -99,7 +127,21 @@ keywords: anagh sharma, design, experiment, designer
 
 <div class="row mt3">
   <div class="large-4 medium-4 columns pb2">
-      <p class="room-text text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
+      <p class="text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
+      <br>
+      <svg width="72px" height="25px" viewBox="0 0 72 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="Home-Copy-3" transform="translate(-89.000000, -745.000000)">
+                <g id="Group-8-Copy" transform="translate(89.000000, 745.000000)">
+                    <rect id="Background" fill="#4A4A4A" x="0" y="0" width="72" height="25" rx="4"></rect>
+                    <path d="M16.4444444,12.9 L12,12.9 L12,17.4 L16.4444444,17.4 L16.4444444,12.9 Z M15.5555556,3 L15.5555556,4.8 L8.44444444,4.8 L8.44444444,3 L6.66666667,3 L6.66666667,4.8 L5.77777778,4.8 C4.79111111,4.8 4.00888889,5.61 4.00888889,6.6 L4,19.2 C4,20.19 4.79111111,21 5.77777778,21 L18.2222222,21 C19.2,21 20,20.19 20,19.2 L20,6.6 C20,5.61 19.2,4.8 18.2222222,4.8 L17.3333333,4.8 L17.3333333,3 L15.5555556,3 Z M18.2222222,19.2 L5.77777778,19.2 L5.77777778,9.3 L18.2222222,9.3 L18.2222222,19.2 Z" id="Shape" fill="#202020" fill-rule="nonzero"></path>
+                    <text id="•-2016" font-family="Roboto-Medium, Roboto" font-size="15" font-weight="400" fill="#202020">
+                        <tspan x="24" y="18">• 2018</tspan>
+                    </text>
+                </g>
+            </g>
+        </g>
+      </svg>
   </div>
   <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/carol-illustrations/001-no-music.jpg" class="slb" alt="No music playing"/>
@@ -129,7 +171,21 @@ keywords: anagh sharma, design, experiment, designer
 
 <div class="row mt3">
   <div class="large-4 medium-4 columns pb2">
-      <p class="room-text text-justify pr5">Being a sneakerhead, I did a series of illustrations showing silhouette of the pairs that I own. The idea was to show the outlines in a golden colour to give the sneakers a premium look.</p>
+      <p class="text-justify pr5">Being a sneakerhead, I did a series of illustrations showing silhouette of the pairs that I own. The idea was to show the outlines in a golden colour to give the sneakers a premium look.</p>
+      <br>
+      <svg width="72px" height="25px" viewBox="0 0 72 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <g id="Home-Copy-3" transform="translate(-89.000000, -745.000000)">
+                <g id="Group-8-Copy" transform="translate(89.000000, 745.000000)">
+                    <rect id="Background" fill="#4A4A4A" x="0" y="0" width="72" height="25" rx="4"></rect>
+                    <path d="M16.4444444,12.9 L12,12.9 L12,17.4 L16.4444444,17.4 L16.4444444,12.9 Z M15.5555556,3 L15.5555556,4.8 L8.44444444,4.8 L8.44444444,3 L6.66666667,3 L6.66666667,4.8 L5.77777778,4.8 C4.79111111,4.8 4.00888889,5.61 4.00888889,6.6 L4,19.2 C4,20.19 4.79111111,21 5.77777778,21 L18.2222222,21 C19.2,21 20,20.19 20,19.2 L20,6.6 C20,5.61 19.2,4.8 18.2222222,4.8 L17.3333333,4.8 L17.3333333,3 L15.5555556,3 Z M18.2222222,19.2 L5.77777778,19.2 L5.77777778,9.3 L18.2222222,9.3 L18.2222222,19.2 Z" id="Shape" fill="#202020" fill-rule="nonzero"></path>
+                    <text id="•-2016" font-family="Roboto-Medium, Roboto" font-size="15" font-weight="400" fill="#202020">
+                        <tspan x="24" y="18">• 2019</tspan>
+                    </text>
+                </g>
+            </g>
+        </g>
+      </svg>
   </div>
   <div class="large-4 medium-4 columns pb2">
     <img src="/assets/images/the-design-room/snkrhd/001-adidas-originals-nmr-r1.png" class="slb" alt="Illustration of Adidas Originals NMD R1"/>
