--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ keywords: design, portfolio, development, designer
           <div class="large-4 medium-4 columns mt1">
             <a href="{{ post.url }}" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">{{ post.title }}</h5>
+                <h5 class="f4 mh3 font-bold lh-title">{{ post.title }}</h5>
                 <h6 class="f6 mh3 font-medium font-secondary">{{ post.date | date_to_long_string }}<br>READ TIME - {{ post.read-time }}</h6>
               </div>
             </a>
@@ -158,10 +158,10 @@ keywords: design, portfolio, development, designer
           <h6 class="mt3 f6 font-bold font-secondary">LATEST COOKIES</h6>
         <ul class="no-bullet">
             <li class="blog-list mv3 pv2 ph3">
-                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-content font-secondary-bold f5 lh-title">Creating a custom hyperlink control for Xamarin.Mac</a>
+                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-medium f5">Creating a custom hyperlink control for Xamarin.Mac</a>
               </li>
           <li class="blog-list mv3 pv2 ph3">
-            <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-content font-secondary-bold f5 lh-title">Handling different UI states with a single ViewController</a>
+            <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-medium f5">Handling different UI states with a single ViewController</a>
           </li>
         </ul>
       </div>
