--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -34,13 +34,13 @@ keywords: anagh sharma, design, development, designer
         <div class="row">
             <ul class="no-bullet">
               <li class="blog-list mv3 pv3 ph3">
-                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-content font-secondary-bold f4 lh-title">Creating a custom hyperlink control for Xamarin.Mac</a>
+                <a href="{{ site.url }}/blog/creating-a-hyperlink-control-for-xamarin-mac/" class="heading font-bold f4 lh-title">Creating a custom hyperlink control for Xamarin.Mac</a>
               </li>
               <li class="blog-list mv3 pv3 ph3">
-                  <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-content font-secondary-bold f4 lh-title">Handling different UI states with a single ViewController</a>
+                  <a href="{{ site.url }}/blog/the-state-of-stateful-ui/" class="heading font-bold f4 lh-title">Handling different UI states with a single ViewController</a>
                 </li>
               <li class="blog-list mv3 pv3 ph3">
-                <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
+                <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
               </li>
             </ul>
         </div>
