Updated identity project

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -26,7 +26,7 @@ keywords: branding, identity, design, storytelling
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns mb4">
-                <div class="content-table-bar" style="display: inline-block; height: 12.25rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 12.5rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Role</li>
@@ -37,14 +37,14 @@ keywords: branding, identity, design, storytelling
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
-                <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
+                <h4 class="font-dark font-secondary-bold">Overview</h4>
                 <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Altogether it depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.<br><br> </p>
                 <img src="/assets/images/projects/identity/cs-first.jpg" class="slb" alt="Design and Make"/>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Role</h4>
                 <p class="text-justify font-dark lh-copy mt4">Designer and Developer</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Story</h4>
                 <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A home is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the Home. </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Problem</h4>
                 <p class="text-justify font-dark lh-copy mt4">I started this project asking myself the obvious - Why? What are the problems that the project aims to solve? Jotted down all the problems that I thought needed some serious thinking - <br><br>
                   <ol class="font-dark">
                     <li>Articulating who I am and what I do.
@@ -65,7 +65,7 @@ keywords: branding, identity, design, storytelling
                     <li class="text-justify">Distinguishing myself from competition in digital presence.</li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Process</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Process</h4>
                 <p class="text-justify font-dark lh-copy mt4">Starting a project out in the dark can be intimidating. Kickstarting can become easier once you answer these questions (not limited to) -<br><br>
                   <ol class="font-dark">
                     <li>Who is the owner of this project?</li>
@@ -86,12 +86,12 @@ keywords: branding, identity, design, storytelling
                 <p class="text-justify font-dark lh-copy mt3">Selecting a typeface for any project can be a tricky and time consuming process. I picked up Roboto as my primary typeface for it works good with Digital and Print Media. For the secondary typeface, I selected Playfair Display; a serif typeface. Another motive for selecting these typefaces is that these are free and a part of open source software. </p>
                 <img src="/assets/images/projects/identity/cs-fifth.jpg" class="slb" alt="Anagh Sharma typeface demonstration"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
-                <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
+                <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color font-medium" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
+                <h4 class="font-dark font-secondary-bold mt5">Learnings</h4>
                 <p class="text-justify font-dark lh-copy mt4">
                   <ol class="font-dark text-justify lh-copy mb4">
                     <li class="mv2 font-medium">Perfecting things
-                      <p class="font-normal">I wasted a lot of time perfecting things and realised that this project won't ever face completion this way. I even penned an article - <a class="font-primary-color" href="{{ site.url }}/blog/the-whirlpool-of-perfection/">The Whirlpool of Perfection</a>, regarding this dreadful situation.</p>
+                      <p class="font-normal">I wasted a lot of time perfecting things and realised that this project won't ever face completion this way. I even penned an article - <a class="font-primary-color font-medium" href="{{ site.url }}/blog/the-whirlpool-of-perfection/">The Whirlpool of Perfection</a>, regarding this dreadful situation.</p>
                     </li>
                     <li class="mv2 font-medium">Working on things which did not matter
                       <p class="font-normal">I also worked on print materials regarding the personal branding instead of focusing on its digital part only.</p>
@@ -107,7 +107,7 @@ keywords: branding, identity, design, storytelling
                     </li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-content font-secondary text-center mv5">That's all folks</h5>
+                <h5 class="font-dark font-secondary text-center mv5">That's all folks</h5>
             </div>
         </div> 
       </div>
