Updated Behance and Carol project

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -26,7 +26,7 @@ keywords: branding, identity, design, storytelling
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns mb4">
-                <div class="content-table-bar" style="display: inline-block; height: 12.5rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 12.5rem; border-radius: 1rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Role</li>
@@ -107,7 +107,7 @@ keywords: branding, identity, design, storytelling
                     </li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary text-center mv5">That's all folks</h5>
+                <h5 class="font-dark font-content font-secondary text-center mv5">That's all folks</h5>
             </div>
         </div> 
       </div>
