Updated XBOX project

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -26,7 +26,7 @@ keywords: design, xbox, iphone, mobile, app, console
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns mb4">
-                <div class="content-table-bar" style="display: inline-block; height: 14.5rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 14.5rem; border-radius: 1rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Role</li>
@@ -38,11 +38,11 @@ keywords: design, xbox, iphone, mobile, app, console
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
-                <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
+                <h4 class="font-dark font-secondary-bold">Overview</h4>
                 <p class="text-justify font-dark lh-copy mt4">In 2016, I bought an XBOX One and wanted to keep track of my games and achievements using the iPhone app. I found it too confusing to use and did a conceptual redesign from ground up to tackle the foundational flaws.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Role</h4>
                 <p class="text-justify font-dark lh-copy mt4">Product Designer</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Problem</h4>
                 <p class="text-justify font-dark lh-copy mt4">The official XBOX app on iPhone has many flaws. I downloaded the app, signed in and landed on my feed. There were too many options on the screen. If you want to check your profile and achievements, good luck with that. Information Architecture, Layout and Visual Design appeared like a Windows 10 Mobile app. People on a particular platform such as iOS are familiar with apps having designs somewhat according to the preset guidelines. They see and use the familiar design everyday in the default apps and apps that they have downloaded from the app store. And that is what they anticipate - familiarity and ease of use.<br><br>In iOS, most of the apps use Tabs in the bottom for organising the content because of their ease of use. Tabs are also easier to access being at the bottom of the screens. Those apps avoid having the hamburger menu which on the contrary the XBOX app is using. The moment you tap on the Hamburger Menu you find a plethora of superfluous options just to confuse you to some more extent. They have not placed only the secondary options there, they have put almost everything. Psychologically our short term memory can help us to remember 4-5 items at a time. So if you are using an iOS app even for the first couple of times, chances are high that you will roughly know ‘Where to find What’. That’s why Tabs feel far more better in organising content instead of hiding everything aimlessly in the Hamburger menu. <br><br>To summarise -
                   <ol class="font-dark">
                       <li>The information architecture is unbalanced and vague.</li>
@@ -52,7 +52,7 @@ keywords: design, xbox, iphone, mobile, app, console
                       <li>The app does not assist in tracking games.</li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Ideas</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Ideas</h4>
                 <p class="text-justify font-dark lh-copy mt4">To solve the problems emerging out in the research phase, prioritisation of solution is required -
                     <ol class="font-dark">
                         <li>Virtual Controlling of the console.</li>
@@ -61,7 +61,7 @@ keywords: design, xbox, iphone, mobile, app, console
                         <li>Buy apps and games right from the app.</li>
                     </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Information Architecture</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Information Architecture</h4>
                 <p class="text-justify font-dark lh-copy mt4">In order to reduce confusion, I divided the whole app experience in 5 major entities viz - 
                     <ol class="font-dark">
                         <li><strong>Social Feed</strong> - Post Update, Your Activities, Friends' Activities, Updates from XBOX and Favorite Games.</li>
@@ -72,7 +72,7 @@ keywords: design, xbox, iphone, mobile, app, console
                     </ol>
                 </p>
                 <img src="/assets/images/projects/xbox/cs-first.jpg" class="slb mt4" alt="Navigation Flow"/>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Visual Design</h4>
                 <!-- <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4" alt="XBOX Logo"/> -->
                 <iframe class="mt4" width="100%" height="390" src="https://www.youtube.com/embed/KdE4-YoPzsA?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                 <img src="/assets/images/projects/xbox/cs-third.jpg" class="slb mt4" alt="App Screens"/>
@@ -81,7 +81,7 @@ keywords: design, xbox, iphone, mobile, app, console
                 <img src="/assets/images/projects/xbox/cs-sixth.gif" class="slb mt4" alt="Like animation in slow motion"/>
                 <img src="/assets/images/projects/xbox/cs-seventh.gif" class="slb mt4" alt="Post Update interaction"/>
                 <img src="/assets/images/projects/xbox/cs-eigth.gif" class="slb mt4 mb3" alt="Trending collpase animation in slow motion"/>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Learnings</h4>
                 <p class="text-justify font-dark lh-copy mt4">Although this was just a conceptual redesign, I learnt a lot of things from this project - Time Constraint being the primary one. Instead of focusing on creating the end to end flows first, I got captivated with micro-interactions on the home screen. You could have guessed what happened next. I was not seeing any progress apparently as I was too much busy in making those interactions perfect; focusing on the time-taken by an element, position of the element and other motion stuff. It was only a matter of time when I stopped working on the project. Only after realising this I was able to pick the project again and finish it. This time I did not let my friend - perfection hang around with me. Building the end-to-end flow was a priority. Whilst the interactions were also taken care of which I know are far from perfect.</p>
                 <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5>
             </div>
