--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -26,7 +26,7 @@ keywords: uber, infographics, ridesharing, carpooling
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 12.25rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 12.25rem; border-radius: 1rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Role</li>
@@ -37,11 +37,11 @@ keywords: uber, infographics, ridesharing, carpooling
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
-                <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
+                <h4 class="font-dark font-secondary-bold">Overview</h4>
                 <p class="text-justify font-dark lh-copy mt4">This project was done as part of a hypothetical project for Uber design assignment. The objective was to create an infographics from scratch demonstrating the pros of ride sharing in a city like New Delhi.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Role</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Role</h4>
                 <p class="text-justify font-dark lh-copy mt4">Designer</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Problem</h4>
                 <p class="text-justify font-dark lh-copy mt4">The problem statement aligns with the fact that a car remains unused for most of the time of the day and even when used only one person uses it.
                   <br><br>10 million cars in Delhi are used ineffectively.
                   <ol class="font-dark text-justify lh-copy mb4">
@@ -51,14 +51,14 @@ keywords: uber, infographics, ridesharing, carpooling
                     <li class="mv2">If more people travel together, only 1/3rd of the current number of cars is needed.</li>
                   </ol>
                 </p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
-                <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Research</h4>
+                <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color font-medium">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
+                <h4 class="font-dark font-secondary-bold mt5">Visual Design</h4>
                 <p class="text-justify font-dark lh-copy mt4">I came up with this solution at third iteration. In the first two iterations, I was trying to focus more on the visualisation through cars. I wasn't going anywhere with that solution since those elements were distracting from the data.</p>
                 <img src="/assets/images/projects/uber/cs-first.jpg" class="slb mt3" alt="Uber Infographics Part 1"/>
                 <img src="/assets/images/projects/uber/cs-second.jpg" class="slb mt3" alt="Uber Infographics Part 2"/>
                 <img src="/assets/images/projects/uber/cs-third.jpg" class="slb mt3" alt="Uber Infographics Complete"/>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Learnings</h5>
+                <h4 class="font-dark font-secondary-bold mt5">Learnings</h4>
                 <p class="text-justify font-dark lh-copy mt4">This was my first infographics project so the entire experience was pretty much new to me. Right now, some icons do not represent unique entity(s) e.g. keys. What I think I could have done better with the artwork is the use of icons and the associated information.</p>
                 <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> 
             </div>
