--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -86,12 +86,12 @@ keywords: branding, identity, design, storytelling
                 <p class="text-justify font-dark lh-copy mt3">Selecting a typeface for any project can be a tricky and time consuming process. I picked up Roboto as my primary typeface for it works good with Digital and Print Media. For the secondary typeface, I selected Playfair Display; a serif typeface. Another motive for selecting these typefaces is that these are free and a part of open source software. </p>
                 <img src="/assets/images/projects/identity/cs-fifth.jpg" class="slb" alt="Anagh Sharma typeface demonstration"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
-                <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color font-medium" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
+                <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color font-medium" href="{{ site.url }}" aria-label="Go to home page">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
                 <h4 class="font-dark font-secondary-bold mt5">Learnings</h4>
                 <p class="text-justify font-dark lh-copy mt4">
                   <ol class="font-dark text-justify lh-copy mb4">
                     <li class="mv2 font-medium">Perfecting things
-                      <p class="font-normal">I wasted a lot of time perfecting things and realised that this project won't ever face completion this way. I even penned an article - <a class="font-primary-color font-medium" href="{{ site.url }}/blog/the-whirlpool-of-perfection/">The Whirlpool of Perfection</a>, regarding this dreadful situation.</p>
+                      <p class="font-normal">I wasted a lot of time perfecting things and realised that this project won't ever face completion this way. I even penned an article - <a class="font-primary-color font-medium" href="{{ site.url }}/blog/the-whirlpool-of-perfection/" aria-label="Read the blog post - The Whirlpool of Perfection">The Whirlpool of Perfection</a>, regarding this dreadful situation.</p>
                     </li>
                     <li class="mv2 font-medium">Working on things which did not matter
                       <p class="font-normal">I also worked on print materials regarding the personal branding instead of focusing on its digital part only.</p>
