--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -52,7 +52,7 @@ keywords: uber, infographics, ridesharing, carpooling
                   </ol>
                 </p>
                 <h4 class="font-dark font-secondary-bold mt5">Research</h4>
-                <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color font-medium">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
+                <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color font-medium" aria-label="Go to brand.uber.com">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
                 <h4 class="font-dark font-secondary-bold mt5">Visual Design</h4>
                 <p class="text-justify font-dark lh-copy mt4">I came up with this solution at third iteration. In the first two iterations, I was trying to focus more on the visualisation through cars. I wasn't going anywhere with that solution since those elements were distracting from the data.</p>
                 <img src="/assets/images/projects/uber/cs-first.jpg" class="slb mt3" alt="Uber Infographics Part 1"/>
