--- a/_pages/room.html
+++ b/_pages/room.html
@@ -18,7 +18,7 @@ keywords: anagh sharma, design, experiment, designer
       <img src="/assets/images/the-room-hero.svg" alt="Hello from The Design Room"/>
     </div>
     <div class="large-6 large-offset-1 end medium-8 columns mt3">
-      <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
+      <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color" aria-label="Check The Design Room on Instagram">Instagram</a> lately and have been looking to improve this project since then.</p>
     </div>
 </div>
 
@@ -127,7 +127,7 @@ keywords: anagh sharma, design, experiment, designer
 
 <div class="row mt3">
   <div class="large-4 medium-4 columns pb2">
-      <p class="text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
+      <p class="text-justify pr5">Illustrations for different UI states in <a href="https://github.com/AnaghSharma/Carol" target="_blank" class="font-primary-color font-medium" aria-label="View Carol on GitHub">Carol</a> - a minimal and beautiful lyrics app for macOS. Since the theme of app is dark, the challenge was to create a consistent style for the illustrations.</p>
       <br>
       <svg width="72px" height="25px" viewBox="0 0 72 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
