Updated store page

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -16,29 +16,35 @@ keywords: store, shop, download
 </div>
 <div class="row mt6 mb6">
     <div class="row">
-        <div class="large-8 medium-8 small-12 columns">
+        <div class="columns">
           <div class="row">
-            <div class="large-6 medium-6 small-12 columns left-collapse small-collapse">
-              <div class="behance-store-thumbnail store-product-container square mb2">
-                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="cta action-button font-bold ml5" aria-label="Open View for Behance in Windows Store">DOWNLOAD FROM WINDOWS STORE</a>
+            <div class="large-4 medium-4 columns">
+              <div class="unroll-store-thumbnail store-product-container square mb2">
+                <a href="https://apps.apple.com/us/app/unroll-photos-stats/id1511042497" target="_blank" class="cta action-button font-bold ml5" aria-label="Open Unroll in App Store">DOWNLOAD FROM APP STORE</a>
               </div>
             </div>
-            <div class="large-6 medium-6 columns right-collapse small-collapse">
+            <div class="large-4 medium-4 columns">
               <div class="carol-store-thumbnail store-product-container square mb2">
                 <a href="https://gumroad.com/l/jTGQEa" target="_blank" class="cta action-button font-bold" aria-label="Open to buy and download Carol from gumroad.com">DOWNLOAD NOW</a>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="columns left-collapse right-collapse small-collapse">
-                <div class="ambar-store-thumbnail store-product-container horizontal-rect-8 mb2">
-                    <a href="https://github.com/AnaghSharma/Ambar-SwiftUI" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold" aria-label="View Ambar on GitHub">DOWNLOAD NOW</a>
-                </div>
+            <div class="large-4 medium-4 columns">
+              <div class="behance-store-thumbnail store-product-container square mb2">
+                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="cta action-button font-bold ml5" aria-label="Open View for Behance in Windows Store">DOWNLOAD FROM WINDOWS STORE</a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="large-4 medium-4 columns hide-for-small-only">
-          <div class="promote-store-thumbnail vertical-rect mb2">
+          <div class="row">
+            <div class="large-8 medium-8 columns">
+              <div class="snkrhd-store-thumbnail store-product-container horizontal-rect-8 mb2">
+                <a href="https://gum.co/NoDOB" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 10%;" class="action-button font-bold" aria-label="Open to buy and download Sneakers illustrations from gumroad.com">DOWNLOAD NOW</a>
+              </div>
+            </div>
+            <div class="large-4 medium-4 columns">
+              <div class="ambar-store-thumbnail store-product-container square mb2">
+                <a href="https://github.com/AnaghSharma/Ambar-SwiftUI" target="_blank" class="cta action-button font-bold ml5" aria-label="View Ambar on GitHub">DOWNLOAD NOW</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
